<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bk"
    android:focusableInTouchMode="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_shadow">

        <TextView
            style="@style/loginHeaderText"
            android:gravity="center"
            android:layout_marginTop="@dimen/mediumViewsMargin"
            android:text="@string/text_register" />

        <EditText
            android:id="@+id/registerEmail"
            style="@style/modifiedEditText"
            android:hint="@string/text_login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerName"
            style="@style/modifiedEditText"
            android:hint="@string/text_register_name"
            android:inputType="text"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerNickname"
            style="@style/modifiedEditText"
            android:hint="@string/text_register_nickname"
            android:inputType="text"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerAge"
            style="@style/modifiedEditText"
            android:hint="@string/text_register_age"
            android:inputType="number"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerCountry"
            style="@style/modifiedEditText"
            android:hint="@string/text_register_country"
            android:inputType="text"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerCity"
            style="@style/modifiedEditText"
            android:hint="@string/text_register_city"
            android:inputType="text"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerAddress"
            style="@style/modifiedEditText"
            android:hint="@string/text_register_address"
            android:inputType="text"
            android:maxLines="2"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerPassword1"
            style="@style/modifiedEditText"
            android:hint="@string/text_login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/registerPassword2"
            style="@style/modifiedEditText"
            android:hint="@string/text_login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/registerSubmitButton"
            style="@style/mediumSquareRoundedButton"
            android:layout_gravity="center"
            android:layout_width="323dp"
            android:layout_marginTop="@dimen/mediumViewsMargin"
            android:text="@string/text_register" />

        <TextView
            style="@style/loginText"
            android:gravity="center"
            android:layout_marginTop="@dimen/mediumViewsMargin"
            android:text="@string/text_go_to_login" />

        <Button
            android:id="@+id/loginGoToButton"
            style="@style/mediumSquareRoundedButton"
            android:layout_width="157dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mediumViewsMargin"
            android:text="@string/text_login" />

    </LinearLayout>

</ScrollView>
