<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_shadow"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        style="@style/bigLightText"
        android:text="@string/text_received_ratings"
        android:layout_marginBottom="@dimen/mediumViewsMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/creatorNicknameReviewText"
        style="@style/bigLightText"
        android:text="@string/value_event_nickname_creator"/>
    <include layout="@layout/component_average_review"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/assigneeNicknameText"
        style="@style/bigLightText"
        android:text="@string/value_event_nickname_assignee"/>
    <include layout="@layout/component_average_review"/>

</LinearLayout>
