<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <View
            android:id="@+id/giveReviewBackButton"
            android:background="@drawable/ic_baseline_west_24"
            android:layout_height="45dp"
            android:layout_width="45dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/bigLightText"
            android:text="@string/text_send_review"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_review_explanation"
            android:layout_marginTop="15dp"
            style="@style/mediumLightText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_honesty"
            android:layout_marginTop="35dp"
            android:textColor="@color/colorAccent"
            style="@style/bigLightText"/>
        <RatingBar
            android:id="@+id/ratingHonestyRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize=".5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_punctuality"
            android:textColor="@color/colorAccent"
            style="@style/bigLightText"/>
        <RatingBar
            android:id="@+id/ratingPunctualityRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize=".5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_attitude"
            android:textColor="@color/colorAccent"
            style="@style/bigLightText"/>
        <RatingBar
            android:id="@+id/ratingAttitudeRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize=".5" />

        <Button
            android:text="@string/text_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            style="@style/smallSquareRoundedButton"
            android:layout_gravity="center"
            android:id="@+id/submitButton" />


    </LinearLayout>
</ScrollView>