<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <View
            android:background="@drawable/ic_baseline_west_24"
            android:layout_height="45dp"
            android:layout_width="45dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/bigLightText"
            android:text="@string/text_change_password"
            android:layout_marginBottom="45dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_current_password"
            style="@style/editProfileText"/>
        <EditText
            android:id="@+id/currentPassword"
            style="@style/modifiedEditText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:hint="@string/text_current_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_new_password"
            style="@style/editProfileText"/>
        <EditText
            android:id="@+id/newPassword"
            style="@style/modifiedEditText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:hint="@string/text_new_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirm_new_password"
            style="@style/editProfileText"/>
        <EditText
            android:id="@+id/confirmNewPassword"
            style="@style/modifiedEditText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:hint="@string/text_confirm_new_password"/>


        <Button
            android:id="@+id/submitChangePasswordButton"
            style="@style/bigSquareRoundedButton"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/mediumViewsMargin"
            android:text="@string/text_submit" />

    </LinearLayout>

</ScrollView>
