<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="event"
            type="com.e.thetogetherapp.data.model.Event" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <View
                android:id="@+id/editEventBackButton"
                android:background="@drawable/ic_baseline_west_24"
                android:layout_height="45dp"
                android:layout_width="45dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                style="@style/bigLightText"
                android:text="@string/text_edit"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_event_title"
                style="@style/editProfileText"/>
            <EditText
                android:id="@+id/editEventTitle"
                style="@style/modifiedEditText"
                android:text="@={event.title}"
                android:maxLines="1"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_event_location"
                style="@style/editProfileText"/>
            <EditText
                android:id="@+id/editEventLocation"
                style="@style/modifiedEditText"
                android:text="@={event.location}"
                android:maxLines="1"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_event_date"
                style="@style/editProfileText"/>
            <EditText
                android:id="@+id/editEventDate"
                style="@style/modifiedEditText"
                android:text="@={event.date}"
                android:maxLines="1"
                android:inputType="date"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_event_time"
                style="@style/editProfileText"/>
            <EditText
                android:id="@+id/editEventTime"
                style="@style/modifiedEditText"
                android:text="@={event.time}"
                android:maxLines="1"
                android:inputType="time"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_event_description"
                style="@style/editProfileText"/>
            <EditText
                android:id="@+id/editEventDescription"
                style="@style/modifiedEditText"
                android:text="@={event.description}"
                android:maxLines="15"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_event_category"
                style="@style/editProfileText"/>
<!--            <EditText-->
<!--                android:id="@+id/editEventCategory"-->
<!--                style="@style/modifiedEditText"-->
<!--                android:text="@={event.category}"-->
<!--                android:maxLines="15"-->
<!--                android:inputType="text"-->
<!--                android:importantForAutofill="no"-->
<!--                tools:ignore="LabelFor"/>-->

            <Spinner
                android:id="@+id/editEventCategorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/saveEditEventButton"
                style="@style/bigSquareRoundedButton"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/mediumViewsMargin"
                android:text="@string/text_save" />

        </LinearLayout>

    </ScrollView>

</layout>