<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_top_shadow_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:background="@drawable/ic_baseline_west_24"
            android:layout_height="45dp"
            android:layout_width="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <TextView
            android:id="@+id/categoryNameEvents"
            style="@style/bigLightText"
            android:text="@string/text_my_activity"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/lightAccentColor">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/unassigned">

            <TextView
                style="@style/hugeLightText"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/value_requests_number"/>
            <Button
                style="@style/smallSquareRoundedButton"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/text_unassigned"
                android:backgroundTint="@color/lightAccentColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/pending">

            <TextView
                style="@style/hugeLightText"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/value_donations_number"/>
            <Button
                style="@style/smallSquareRoundedButton"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/text_pending"
                android:backgroundTint="@color/lightAccentColor"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                style="@style/hugeLightText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/value_activity_number"/>
            <Button
                style="@style/smallSquareRoundedButton"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/text_completed"
                android:backgroundTint="@color/lightAccentColor"/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="30dp">

            <include layout="@layout/component_event"/>
            <include layout="@layout/component_event"/>
            <include layout="@layout/component_event"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_no_other"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>

</ScrollView>